RESOLVED FIXED125749
WebKit2 View Gestures: Can't pinch in past the maximum scale
https://bugs.webkit.org/show_bug.cgi?id=125749
Summary WebKit2 View Gestures: Can't pinch in past the maximum scale
Tim Horton
Reported 2013-12-14 20:09:52 PST
You should still be able to pinch in (with great resistance) once you get past the maximum scale, just like you can at the minimum.
Attachments
patch (5.27 KB, patch)
2013-12-15 04:41 PST, Tim Horton
no flags
Tim Horton
Comment 1 2013-12-15 04:41:17 PST
WebKit Commit Bot
Comment 2 2013-12-15 22:36:06 PST
Comment on attachment 219275 [details] patch Clearing flags on attachment: 219275 Committed r160630: <http://trac.webkit.org/changeset/160630>
WebKit Commit Bot
Comment 3 2013-12-15 22:36:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.