WebKit2 View Gestures: Can't pinch in past the maximum scale https://bugs.webkit.org/show_bug.cgi?id=125749

Reviewed by Anders Carlsson.

Pinching in past the maximum scale should result in the zoom resisting, but continuing.

* UIProcess/mac/ViewGestureController.cpp:
(WebKit::resistanceForDelta):
Clean up the logic and apply resistance to pinching in past the maximum.

(WebKit::ViewGestureController::handleMagnificationGesture):
(WebKit::ViewGestureController::endMagnificationGesture):
* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::commitTransientZoom):


Canonical link: https://commits.webkit.org/143792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160630 268f45cc-cd09-0410-ab3c-d52691b4dbfc